# Co-Compiler

./: .gitignore  .gitmodules  CMakeLists.txt
src/: confighandler.cpp  confighandler.h  enums.h  mainwindow.cpp  mainwindow.h
src/widgets/: luasyntaxhighlighting.cpp  luasyntaxhighlighting.h  processlistwidgetitem.h  qwcfiledialog.cpp  qwcfiledialog.h
